Cluster/App Umgebung/nodeFile.yaml
kind: Service
apiVersion: v1
metadata:
  creationTimestamp: null
  name: node-file
spec:
  ports:
  - port: 3000  
    protocol: TCP
    targetPort: 3000 
  selector:
    run: node-file
    database: node-file
status:
  loadBalancer: {}
---
kind: Deployment
apiVersion: apps/v1
metadata:
  creationTimestamp: null
  labels:
    run: node-file
    database: node-file
  name: node-file
spec:
  replicas: 1
  selector:
    matchLabels:
      run: node-file
      database: node-file
  template:
    metadata:
      creationTimestamp: null
      labels:
        run: node-file
        database: node-file
    spec:
      containers:
      - image: stephandiegeilesau/node-application:latest
        imagePullPolicy: IfNotPresent
        name: mynode-file
        ports:
        - containerPort: 3000 
        resources: {}
