Cluster/App Umgebung/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
 name: my-ingress
 annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
 rules:
 
  - http:
     paths:
     - path: /
       backend:
         serviceName: node-file
         servicePort: 3000
